--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,20 @@
+body {
+    margin: 0
+}
+
+.top {
+    position: absolute;
+}
+
 video::-webkit-media-controls-enclosure {
     display:none
+}
+
+#info {
+	position: absolute;
+	top: 10px;
+	width: 100%;
+	text-align: center;
+	z-index: 100;
+	display:block;
 }
