--- a/templates/index.html
+++ b/templates/index.html
@@ -2,23 +2,27 @@
 <html>
     <head>
         <title>Live Transcription</title>
-        <link href="https://vjs.zencdn.net/8.3.0/video-js.css" rel="stylesheet" />
         <link rel="stylesheet" href="static/styles.css" type="text/css" media="screen" />
     </head>
     <body>
-        <p id="status">Connection status will go here</p>
-        <p id="transcript"></p>
-        <div>
-            <video id="mainVideo"
-                   controls
-                   width="100%">
-                <source src="/video" type="video/webm">
-            </video>
+        <div id="info">Description</div>
+        <div class="top">
+            <p id="status">Connection status will go here</p>
         </div>
-        <!-- <script src="https://vjs.zencdn.net/8.3.0/video.min.js"></script> -->
-        <script src="static/main.js"></script>
-        <script src="static/service-worker.js"></script>
+        <div id="three-container"></div>
+        <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
 
+        <script type="importmap">
+         {
+             "imports": {
+                 "three": "https://unpkg.com/three@0.153.0/build/three.module.js",
+                 "three/addons/": "https://unpkg.com/three@0.153.0/examples/jsm/"
+             }
+         }
+        </script>
+
+        <script type="module" src="static/main.js"></script>
+        <script type="module" src="static/animation.js"></script>
 
     </body>
 </html>
