Show multiple clients in the UI

--- a/templates/demo.html
+++ b/templates/demo.html
@@ -6,8 +6,10 @@
         <link rel="stylesheet" href="static/styles.css" type="text/css" media="screen" />
     </head>
     <body>
-        <p id="status">Connection status will go here</p>
-        <p id="transcript"></p>
+        <div class="overlay">
+            <p id="status">Connection status will go here</p>
+            <p id="connected-clients">Connected clients will go here</p>
+        </div>
         <div>
             <video id="mainVideo"
                    controls
