Submit my video to s3 and make the app use s3

--- a/templates/demo.html
+++ b/templates/demo.html
@@ -9,12 +9,15 @@
         <div class="overlay">
             <p id="status">Connection status will go here</p>
             <p id="connected-clients">Connected clients will go here</p>
+            <p id="score"></p>
         </div>
         <div>
             <video id="mainVideo"
                    controls
                    width="100%">
-                <source src="/video" type="video/webm">
+                <!-- <source src="/static/out1.webm" type="video/webm"> -->
+                <source src="https://do-not-kill-flower-bucket.s3.us-east-2.amazonaws.com/out1.webm"
+                        type="video/webm">
             </video>
         </div>
         <!-- <script src="https://vjs.zencdn.net/8.3.0/video.min.js"></script> -->
